@@ -1,4 +1,4 @@
-.TH VNSTAT 1 "DECEMBER 2021" "version 2.9" "User Manuals"
+.TH VNSTAT 1 "JANUARY 2022" "version 2.9" "User Manuals"
 .SH NAME
 vnstat \- a console-based network traffic monitor
 
