@@ -1,4 +1,4 @@
-.TH VNSTAT.CONF 5 "DECEMBER 2021" "version 2.9" "User Manuals"
+.TH VNSTAT.CONF 5 "JANUARY 2022" "version 2.9" "User Manuals"
 .SH NAME
 vnstat.conf \- vnStat configuration file
 
