@@ -1,4 +1,4 @@
-.TH VNSTATI 1 "DECEMBER 2021" "version 2.9" "User Manuals"
+.TH VNSTATI 1 "JANUARY 2022" "version 2.9" "User Manuals"
 .SH NAME
 vnstati \- image output support for vnStat
 
